--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               "src/assets",
               "src/assets/countries.json",
               "src/assets/marker.png",
+              "src/assets/info.png",
               "src/assets/favicon.png"
             ],
             "styles": [
